--- a/src/pages/_app.css
+++ b/src/pages/_app.css
@@ -52,9 +52,6 @@ a, a:active {
 	src: local('Trajan Pro Regular'), url('/fonts/Trajan/TrajanPro-Regular.woff') format('woff');
 }
 
-.slick-next{
-	transform: rotate(180deg);
-}
 .slick-next, .slick-prev{
 	height: 32px;
 	width: 32px;
@@ -64,6 +61,10 @@ a, a:active {
 }
 .slick-prev::before{
 	content: none
+}
+
+.slick-next:before, [dir=rtl] .slick-prev:before{
+	content: none;
 }
 
 
@@ -76,4 +77,8 @@ a, a:active {
 }
 .embla__slide {
   flex: 0 0 100%;
+}
+
+li > div {
+	margin-bottom: 0.5em;
 }
