--- a/src/pages/_app.css
+++ b/src/pages/_app.css
@@ -1,39 +1,120 @@
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
 	margin: 0;
 	padding: 0;
 	border: 0;
 }
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
 	display: block;
 }
 body {
 	line-height: 1;
 }
-ol, ul {
+ol,
+ul {
 	list-style: none;
 }
-blockquote, q {
+blockquote,
+q {
 	quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
 	content: '';
 	content: none;
 }
@@ -41,7 +122,8 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-a, a:active {
+a,
+a:active {
 	text-decoration: none;
 }
 
@@ -52,31 +134,32 @@ a, a:active {
 	src: local('Trajan Pro Regular'), url('/fonts/Trajan/TrajanPro-Regular.woff') format('woff');
 }
 
-.slick-next, .slick-prev{
+.slick-next,
+.slick-prev {
 	height: 32px;
 	width: 32px;
 }
-.slick-next::after{
-	content: none
+.slick-next::after {
+	content: none;
 }
-.slick-prev::before{
-	content: none
-}
-
-.slick-next:before, [dir=rtl] .slick-prev:before{
+.slick-prev::before {
 	content: none;
 }
 
+.slick-next:before,
+[dir='rtl'] .slick-prev:before {
+	content: none;
+}
 
 .embla {
-  overflow: hidden;
+	overflow: hidden;
 }
 .embla__container {
-  display: flex;
+	display: flex;
 	flex-direction: column;
 }
 .embla__slide {
-  flex: 0 0 100%;
+	flex: 0 0 100%;
 }
 
 li > div {
